# life-architecture

./: .gitignore  CLAUDE.md  Plans.md  README.md  package-lock.json  package.json  tailwind.config.ts
.serena/: project.yml
tools/orchestrator/: Cargo.toml  orchestrator-certify.ts  orchestrator-tmux.ts  orchestrator.ts  tsconfig.json
tools/orchestrator/orchestrate/: skills.config.template.toml  skills.config.toml
tools/orchestrator/pr/: check-pr-body-traceability.ts  cleanup-by-pr.sh  git-remote-auth.ts  landing-exclusive.ts  merge-safe.ts  publish.ts
tools/orchestrator/repo/: apply-parent-links.ts  audit-issue-parent-deps.ts
tools/orchestrator/runtime/: close.ts  execute.ts  execution-plan-contract.ts  export-execution-plan.ts  issue.ts  orchestration-session-control-plane.ts  register.ts  rust-runtime.ts  session_phase.ts
tools/orchestrator/scripts/: install.sh
tools/orchestrator/shared/: github_run_context.ts  orchestrator-cli.ts  orchestrator-delegation.ts  orchestrator-status.ts  runtime_event_log.ts  runtime_lifecycle.ts  runtime_policy.ts  session_artifacts.ts  session_lock.ts  session_state.ts  shared_runtime.ts
tools/orchestrator/src/: main.rs  runtime_contract.rs
tools/orchestrator/task/: backfill-task-issue-sot.ts  backfill-task-sizing.ts  certify-task-sizing.ts  check-task-pr-steady-state.ts  create-parent-task.ts  create-task.ts  deliver-execution-event-export.ts  ensure-task-issue.ts  gh-issue-comment-safe.ts  sync-parent-issue-status.ts  task-control-plane.ts  task-scope.ts
tools/orchestrator/task-lifecycle/: task-control-plane.ts
(+253 files in other folders)
