[package]
name = "omta-orchestrator"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "omta-orchestrator"
path = "src/main.rs"

[dependencies]
jsonschema = "0.45.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
time = { version = "0.3.44", features = ["formatting"] }
toml = "0.8.23"
